@@ -55,6 +55,7 @@ S3method(summary, eecf)
 S3method(print, eecf)
 S3method(print, summary.eecf)
 S3method(plot, eecf)
+S3method(lines, eecf)
 
 #new generic function for DR class similar to cdfcomp
 export(eccomp)
